--- a/Readme
+++ b/Readme
@@ -1,9 +1,10 @@
 This is the fusion results of "Focus Relationship Perception for Unsupervised Multi-focus Image Fusion" in the Lytro, MFFW, and MFI-WHU datasets.
 
+# Results download
 Link:https://pan.baidu.com/s/18BJ26CMVuPhy9HhqPRnmuw  
-key：9gmi 
+key：9gmi  
 
-It can be cited as:
+# Reference
 @ARTICLE{10374266,
   author={Liu, Jinyang and Li, Shutao and Dian, Renwei and Song, Ze},
   journal={IEEE Transactions on Multimedia}, 
